--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Which Services Provide Algorithmic Trading Courses With Mentorship Or Coaching?</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">56 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>We Tested Every Month — Here’s When Stocks Perform Best</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -191,7 +191,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -202,7 +202,7 @@
                     <div class="video-info">
                         <h3>A warm goodbye from @sza   enroute to Philly for Ecstasy of Enlightenment | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -213,7 +213,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GTA IS BACK</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -246,7 +246,7 @@
                     <div class="video-info">
                         <h3>How to go beyond thought and sense pure presence</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -411,7 +411,7 @@
                     <div class="video-info">
                         <h3>Love Marriage or Arranged Marriage, Which is Better ? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1148,7 +1148,7 @@
                     <div class="video-info">
                         <h3>WHAT DID HE SAY?!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Which Services Provide Algorithmic Trading Courses With Mentorship Or Coaching?</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">56 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>We Tested Every Month — Here’s When Stocks Perform Best</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5767,7 +5767,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>A warm goodbye from @sza   enroute to Philly for Ecstasy of Enlightenment | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>How to go beyond thought and sense pure presence</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8019,7 +8019,7 @@
                         <div class="video-info">
                             <h3>Love Marriage or Arranged Marriage, Which is Better ? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GTA IS BACK</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10551,7 +10551,7 @@
                         <div class="video-info">
                             <h3>WHAT DID HE SAY?!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
